<resources>
    <string name="app_name">商家端</string>
    <string name="action_settings">Settings</string>
    <string name="login_titile">登录</string>
    <string name="login_phone">请输入企业账号</string>
    <string name="login_pass">请输入密码</string>
    <string name="forget">忘记密码</string>
    <string name="regist">立即注册</string>
    <string name="regist_name">请输入登录名称</string>
    <string name="regist_confirmpass">请确认密码</string>
    <string name="regist_button">下一步</string>
    <string name="forget_name">请输入手机号</string>
    <string name="forget_code">验证码</string>
    <string name="forget_identitycode">注册时身份证号</string>
    <string name="forget_newpass">输入新密码</string>
    <string name="forget_surepass">确认新密码</string>
    <string name="forget_button">确认修改</string>
    <string name="regist_title">企业审核信息</string>
    <string name="forget_surebutton">申请入驻平台</string>
    <string name="gl_wait">请稍等</string>
    <string name="regist_nickname">请输入姓名</string>
    <string name="regist_idcard">请输入身份证号</string>
    <string name="regist_carcard">请输入车牌号</string>
    <string name="text">本人已阅读并同意签署《平台使用协议》</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="ic_title">众鑫能源</string>
</resources>
