<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4">

    <RelativeLayout
        android:id="@+id/rela_titlemain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp">
        <!-- 头部-->
        <ImageView
            android:id="@+id/img_exit"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginLeft="1dp"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:src="@mipmap/icon_back_8a8a8a" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/login_titile"
            android:textColor="@color/A1A1A1"
            android:textSize="22sp" />
    </RelativeLayout>

    <!-- 登录主体-->
    <LinearLayout
        android:id="@+id/lin_loginmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ic_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/A1A1A1"
            android:layout_marginTop="5dp"
            />

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="56dp"
            android:background="@null"
            android:hint="@string/login_phone"
            android:textColorHint="@color/BFC0BF"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="18dp"
            android:background="@color/D3D3D3" />

        <EditText
            android:id="@+id/edit_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/login_pass"
            android:textColorHint="@color/BFC0BF"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="18dp"
            android:background="@color/D3D3D3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_textregist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/regist"
                android:textColor="@color/nine"
                android:textSize="13sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/login_textforget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget"
                android:textColor="@color/nine"
                android:textSize="13sp" />
        </LinearLayout>

        <Button
            android:id="@+id/login_but"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:background="@color/CFE7FB"
            android:gravity="center"
            android:text="@string/login_titile"
            android:textColor="@color/A1A1A1" />
    </LinearLayout>

    <!--忘记密码主体-->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lin_forgetmain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_forgetphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="56dp"
            android:background="@null"
            android:hint="@string/forget_name"
            android:textColorHint="@color/BFC0BF"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="18dp"
            android:background="@color/D3D3D3" />

        <LinearLayout
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_marginRight="5dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edit_forgetcode"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:hint="@string/forget_code"
                    android:textColorHint="@color/BFC0BF"
                    android:textSize="17sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/D3D3D3" />

            </LinearLayout>

            <Button
                android:id="@+id/forget_butcode"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:background="@drawable/gorget_butcode"
                android:text="获取验证码"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/common_textsize_12"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_forgetidentitycode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/forget_identitycode"
            android:textColorHint="@color/BFC0BF"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/D3D3D3" />

        <EditText
            android:id="@+id/edit_forgetnewpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/forget_newpass"
            android:textColorHint="@color/BFC0BF"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/D3D3D3" />

        <EditText
            android:id="@+id/edit_forgetsurepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/forget_surepass"
            android:textColorHint="@color/BFC0BF"
            android:textSize="17sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@color/D3D3D3" />

        <Button
            android:id="@+id/forget_but"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:background="@color/CFE7FB"
            android:gravity="center"
            android:text="@string/forget_button"
            android:textColor="@color/A1A1A1" />
    </LinearLayout>

</RelativeLayout>
